--- a/apiGateway-service/Dockerfile
+++ b/apiGateway-service/Dockerfile
@@ -2,4 +2,5 @@ FROM openjdk:17-jdk
 
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
+COPY src/main/resources/static /app/static
 ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-Duser.timezone=Asia/Seoul" , "-jar", "app.jar"]
