--- a/noti-service/src/main/resources/bootstrap.yml
+++ b/noti-service/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: database-noti,redis
+      name: database-noti, redis, kafka
   kafka:
     bootstrap-servers: "localhost:9092"
 
